--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.9.3",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.12",
+    "material-ui-banner": "^3.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
