--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "gray-matter": "^4.0.3",
+    "luxon": "^3.0.1",
     "marked": "^4.0.12",
     "material-ui-banner": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
