--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.0.0",
     "@types/marked": "^4.0.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
