--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "luxon": "^3.0.1",
     "marked": "^4.0.12",
+    "marked-react": "^2.0.0",
     "moment": "^2.29.4",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -25,7 +26,7 @@
     "@types/luxon": "^3.0.0",
     "@types/marked": "^4.0.2",
     "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
+    "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
