--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@mui/material": "^5.9.3",
     "@types/highlightjs": "^9.12.6",
     "@types/lowlight": "^0.0.7",
+    "@vercel/analytics": "^1.3.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "luxon": "^3.0.1",
     "marked": "^4.0.12",
     "marked-react": "^2.0.0",
     "moment": "^2.29.4",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-lowlight": "^3.0.0"
   },
   "devDependencies": {
