--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/marked": "^4.0.2",
     "@types/node": "17.0.21",
     "@types/react": "^17.0.39",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.8",
     "typescript": "4.6.2"
   }
 }
