--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
     "@types/highlightjs": "^9.12.6",
     "@types/lowlight": "^0.0.7",
     "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
+    "lucide-react": "^0.424.0",
     "luxon": "^3.0.1",
+    "markdown-it": "^14.1.0",
     "marked": "^4.0.12",
     "marked-react": "^2.0.0",
     "moment": "^2.29.4",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lowlight": "^3.0.0"
+    "react-lowlight": "^3.0.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
     "@types/highlight.js": "^10.1.0",
     "@types/luxon": "^3.0.0",
     "@types/marked": "^4.0.2",
